--- a/style.css
+++ b/style.css
@@ -21,3 +21,13 @@ footer img {
     height:300px;
     width:600px;
    } 
+
+.Pyro { 
+    height:275px;
+    width:450px;
+ }
+  
+ .Scout {
+    height:250px;
+    width:200px;
+  }
